# nanda-context-graph-service

./: .dockerignore  .env.example  .env.service.example  .gitignore  DEPLOY.md  Dockerfile  README.md  SKILL.md  docker-compose.yml  pyproject.toml  requirements-service.txt  run_demo.py  run_distributed_demo.py
api/: __init__.py  query.py
cli/: __init__.py  main.py
dashboard/: .dockerignore  .env.local  Dockerfile  default.conf.template  index.html  netlify.toml  nginx.conf  package-lock.json  package.json  railway.json  vercel.json
dashboard/src/: App.jsx
docs/: B4_report.md  COMPARISON.md  INFRASTRUCTURE_AND_CHANGES.md  MERGE_PROPOSAL.md  PRESENTATION.md  benchmarks.md  demo_slides.html  merge.html  merge.md  nanda-context-graph-writeup.html  nanda_context_graph_proposal.docx  paper_draft.md  slides.html  slides.md
docs/pr/: PR-adapter.md  PR-nanda-index.md  PR-nest.md
examples/: adapter_integration_demo.py  e2e_demo.py  nest_integration_demo.py  real_agents_demo.py
examples/distributed/: .gitignore  broker_adapter_agent.py  nest_agent.py
federation/: __init__.py  sync.py
ingest/: __init__.py  main.py
middleware/: __init__.py  mcp_shim.py
schema/: models.py
scripts/: demo.sh  deploy-aws.sh  deploy-gcp.sh  deploy-netlify.sh
service/: app.py  embeddings.py  precedent.py  seed.py  store.py
store/: __init__.py  neo4j_adapter.py
tests/: benchmark_ingest.py  test_bts.py  test_federation.py  test_integration.py  test_middleware.py  test_schema.py  test_store.py
tests_service/: test_api.py  test_units.py
